[tool.poetry]
name = "zblog"
version = "0.0.0"
description = ""
authors = ["zdeyn <zdeyn@zdeyn.com>"]
readme = "README.md"
packages = [{include = "zblog", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
